<resources>
    <string name="app_name">Donate</string>
    <string name="app_name_for_app">DONAtE</string>
    <string name="title_activity_login">SIGN IN</string>
    <string name="home">Blood Request</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>

    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">xyz@gmail.com</string>
    <string name="register">Create an account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">*******</string>
    <string name="prompt_confirm_password">*******</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset">Reset</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile No</string>
    <string name="userAddress">Address</string>
    <string name="nearH">Find nearest Hospitals</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log out</string>
    <string name="devinfo">About us</string>
    <string name="bloodinfo">Blood Info</string>


    <string-array name="division_list">
        <item>Kurunegala</item>
        <item>Katupotha</item>
        <item>Hettipola</item>
        <item>Maho</item>
        <item>Kuliyapitiya</item>
        <item>Naramala</item>
        <item>Polgahawela</item>

    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="eligibility_">Eligibility Requirements</string>
    <string name="female_">If you are <b>female</b>, you must:\nBe healthy and feeling well\nBe at least <b>17 years</b> old in most states\nBe at least <b>5 ft 5 inch</b>\nWeigh at least <b>150 lbs</b>.</string>
    <string name="male_">If you are <b>male</b>, you must:\nBe healthy and feeling well\nBe at least <b>17 years</b> old in most states\nBe at least <b>5 ft 1 inch</b> \nWeigh at least <b>130 lbs</b>.\n</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\nWe need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="aboutus">This is a demo projects on blood donation and collecting. Our Team Members are: \n
                1. Name1 \n
                2. Name2 \n
                3. Name3 \n
                4. Name4 \n
    </string>
    <string name="update_profile">Update Profile</string>
    <string name="make_blood_request">Make Blood Request</string>
    <string name="blood_request">Post Blood Request</string>
    <string name="post">Post</string>
    <string name="request_blood"><b>Note:</b>You can request blood only one time. The next blood request will update your previous request.</string>
    <string name="google_map_key">AIzaSyCx_tiBdrWmZ1nxSRctIQlPmxP62gnLq_0</string>


</resources>
