<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/red"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".activities.Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle"
            android:contentDescription="@string/nav_header_desc"
            android:padding="2dp"
            android:src="@drawable/donar_circle_logo" />

        <TextView
            android:id="@+id/UserNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.1"
            android:paddingTop="4dp"
            android:text="@string/nav_header_title"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/UserEmailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.1"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
