<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/red"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:letterSpacing="0.1"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="Why Should You Donate Blood?"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"/>

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eligibility_"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:letterSpacing="0.1"
            android:layout_marginTop="36dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"/>

        <TextView
            android:gravity="start"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female_"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"/>

    </LinearLayout>

</ScrollView>
