<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/blood_login" />

            <LinearLayout
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


           </LinearLayout>-->


     </LinearLayout>-->

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_email_outline"
                app:tint="@color/black" />-->
                android:contentDescription="@string/app_name"/>
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="E-mail"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <EditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="@string/prompt_email"
                    android:backgroundTint="@color/white"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:importantForAutofill="no" />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_password_outline"
                android:contentDescription="@string/app_name"
                app:tint="@color/black" />
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="@string/prompt_password"
                    android:backgroundTint="@color/white"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:importantForAutofill="no" />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>


        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/ripple_signin_btn"
            android:text="@string/action_sign_in_short"
            android:textAllCaps="true"
            android:letterSpacing="0.2"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have account?"
            android:textColor="@color/grey"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0.1"
            android:gravity="center"
            android:includeFontPadding="false"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/ripple_signup_btn"
            android:padding="2dp"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:letterSpacing="0.2"
            android:textSize="17sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent_black_ten_percent"
            android:padding="2dp"
            android:text="@string/forgotpass"
            android:textAllCaps="true"
            android:letterSpacing="0.2"
            android:fontFamily="@font/poppins_bold"
            android:textSize="13sp"
            android:layout_marginTop="12dp"
            android:textColor="@color/grey" />
        
      <com.google.android.gms.common.SignInButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/bt_sign_in"
          android:layout_margin="1dp"
          android:layout_centerInParent="true"/>

    </LinearLayout>

</RelativeLayout>