<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RestorePassword">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/red"
        android:theme="@style/SplashScreenTheme"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RESET PASSWORD"
                android:fontFamily="@font/poppins_bold"
                android:letterSpacing="0.2"
                android:includeFontPadding="false"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email_outline"
            app:tint="@color/black" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:text="Enter registered e-mail"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/resetUsingEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/prompt_password"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_below="@id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/grey_light" />

    <Button
        android:id="@+id/resetPassbtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view1"
        android:background="@drawable/ripple_signin_btn"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:letterSpacing="0.2"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"/>

</RelativeLayout>