<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.PostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/red"
        android:theme="@style/LoginScreenTheme"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:onClick="gotohomepage"
                android:id="@+id/imageBack"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_request"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/white"
                android:includeFontPadding="false"
                android:textSize="18sp"
                android:letterSpacing="0.2"
                android:layout_marginStart="16dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_below="@id/toolbar"
        android:padding="20dp"
        android:background="@color/white"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_phone_outline"
                android:contentDescription="@string/app_name"
                app:tint="@color/black" />
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone Number"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <EditText
                    android:id="@+id/getMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="9999988888"
                    android:backgroundTint="@color/white"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:importantForAutofill="no" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_address_outline"
                android:contentDescription="@string/app_name"
                app:tint="@color/black" />
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/userAddress"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <EditText
                    android:id="@+id/getLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:hint="XYZ road, ABCD"
                    android:backgroundTint="@color/white"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/black"
                    android:importantForAutofill="no" />

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_blood_outline"
                android:contentDescription="@string/app_name"
                app:tint="@color/black" />
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blood Group"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <Spinner
                    android:id="@+id/SpinnerBlood"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:entries="@array/Blood_Group"/>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_division_outline"
                android:contentDescription="@string/app_name"
                app:tint="@color/black" />
            <View
                android:layout_width="1.5dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:background="@color/grey_light"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Division"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:includeFontPadding="false"/>

                <Spinner
                    android:id="@+id/SpinnerDivision"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:entries="@array/division_list"/>

            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/grey_light"/>

        <Button
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/postbtn"
            android:text="@string/post"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:textColor="@color/white"
            android:letterSpacing="0.2"
            android:textSize="17sp"
            android:background="@drawable/ripple_signin_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:letterSpacing="0.16"
            android:text="@string/request_blood"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>